implements swap handling (adding, removing, taking, accept/denying)

--- a/src/app/views/logins/login.html.erb
+++ b/src/app/views/logins/login.html.erb
@@ -5,7 +5,7 @@
       <%= label_tag :employee_number, nil, class:"control-label" %><br/>
       <%= text_field_tag :user_id, nil, class:"form-control" %><br/>
       <%= label_tag :password, nil, class:"control-label"%><br/>
-      <%= text_field_tag :password, nil, class:"form-control" %><br/>
+      <%= password_field_tag :password, nil, class:"form-control" %><br/>
       <%= submit_tag "login", class:"btn btn-primary" %>
     <% end %>
   </div>
