refactoring swap handling

--- a/src/app/assets/stylesheets/custom.css.scss
+++ b/src/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.jumbotron {
-  margin-top: 50px;
-}
+body { padding-top: 70px; }
 
-th, td {
-  padding: 3px 20px;
-}
+.jumbotron { margin-top: 50px; }
+
+th, td { padding: 3px 20px; }
