--- a/src/app/views/pages/swap_board.html.erb
+++ b/src/app/views/pages/swap_board.html.erb
@@ -16,14 +16,16 @@
         <% @swaps.each do |swap| %>
           <% unless swap.taker %>
             <tr>
-              <td><%= swap.owner.full_name %></td>
+              <td><%= swap.shift.user.full_name %></td>
               <td><%= swap.shift.pretty_date %></td>
               <td><%= swap.shift.pretty_time%></td>
-              <% if swap.owner = @user %>
-                <td><%= button_to "Take", take_shift_path(swap), class: "btn btn-default btn-xs" %></td>
+              <td>
+              <% if swap.shift.user == @user %>
+                <%= button_to "Take Down", remove_swap_path(swap), class: "btn btn-default btn-sm" %>
               <% else %>
-                <td>Your Shift</td>
+                <%= button_to "Take", take_shift_path(swap), class: "btn btn-default btn-sm" %>
               <% end %>
+            </td>
             </tr>
           <% end %>
         <% end %>
@@ -46,11 +48,11 @@
         <% @swaps.each do |swap| %>
           <% if swap.taker %>
             <tr>
-              <td><%= swap.owner.full_name %></td>
+              <td><%= swap.shift.user.full_name %></td>
               <td><%= swap.taker.full_name %></td>
               <td><%= swap.shift.pretty_date %></td>
               <td><%= swap.shift.pretty_time%></td>
-              <td><%= button_to "Confirm", confirm_swap_path(swap), class: "btn btn-default btn-xs" %> <%= button_to "Deny", deny_swap_path(swap), class: "btn btn-default btn-xs" %></td>
+              <td><%= button_to "Confirm", confirm_swap_path(swap), class: "btn btn-default btn-sm" %> <%= button_to "Deny", deny_swap_path(swap), class: "btn btn-default btn-sm" %></td>
             </tr>
           <% end %>
         <% end %>
