--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if @user %>
+    <%= render 'layouts/header' %>
+  <% end %>
   <%= yield %>
 </body>
 </html>
