created user form and necessary html.erb pages for editing current user and listing all users

--- a/src/app/views/pages/swap_board.html.erb
+++ b/src/app/views/pages/swap_board.html.erb
@@ -1,61 +1,59 @@
-<div class="container">
-  <h1 class="text-center">Swap Board</h1>
-  <h2 class="text-center">Available Swaps</h2>
-  <div class="jumbotron">
-    <table class="table table-condensed" id="available-swaps-table">
-      <thead>
-        <tr>
-          <th>Owner</th>
-          <th>Shift Date</th>
-          <th>Shift Times</th>
-          <th>Options</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @swaps.each do |swap| %>
-          <% unless swap.taker %>
-            <tr>
-              <td><%= swap.shift.user.full_name %></td>
-              <td><%= swap.shift.pretty_date %></td>
-              <td><%= swap.shift.pretty_time%></td>
-              <td>
-              <% if swap.shift.user == @user %>
-                <%= button_to "Take Down", remove_swap_path(swap), class: "btn btn-default btn-sm" %>
-              <% else %>
-                <%= button_to "Take", take_shift_path(swap), class: "btn btn-default btn-sm" %>
-              <% end %>
-            </td>
-            </tr>
-          <% end %>
+<h1 class="text-center">Swap Board</h1>
+<h2 class="text-center">Available Swaps</h2>
+<div class="jumbotron">
+  <table class="table table-condensed" id="available-swaps-table">
+    <thead>
+      <tr>
+        <th>Owner</th>
+        <th>Shift Date</th>
+        <th>Shift Times</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @swaps.each do |swap| %>
+        <% unless swap.taker %>
+          <tr>
+            <td><%= swap.shift.user.full_name %></td>
+            <td><%= swap.shift.pretty_date %></td>
+            <td><%= swap.shift.pretty_time%></td>
+            <td>
+            <% if swap.shift.user == @cur_user %>
+              <%= button_to "Take Down", remove_swap_path(swap), class: "btn btn-default btn-sm" %>
+            <% else %>
+              <%= button_to "Take", take_shift_path(swap), class: "btn btn-default btn-sm" %>
+            <% end %>
+          </td>
+          </tr>
         <% end %>
-      </tbody>
-    </table>
-  </div>
-  <h2 class="text-center">Pending Swaps</h2>
-  <div class="jumbotron">
-    <table class="table table-condensed" id="pending-swaps-table">
-      <thead>
-        <tr>
-          <th>Owner</th>
-          <th>Taker</th>
-          <th>Shift Date</th>
-          <th>Shift Times</th>
-          <th>Confirmation</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @swaps.each do |swap| %>
-          <% if swap.taker %>
-            <tr>
-              <td><%= swap.shift.user.full_name %></td>
-              <td><%= swap.taker.full_name %></td>
-              <td><%= swap.shift.pretty_date %></td>
-              <td><%= swap.shift.pretty_time%></td>
-              <td><%= button_to "Confirm", confirm_swap_path(swap), class: "btn btn-default btn-sm" %> <%= button_to "Deny", deny_swap_path(swap), class: "btn btn-default btn-sm" %></td>
-            </tr>
-          <% end %>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+<h2 class="text-center">Pending Swaps</h2>
+<div class="jumbotron">
+  <table class="table table-condensed" id="pending-swaps-table">
+    <thead>
+      <tr>
+        <th>Owner</th>
+        <th>Taker</th>
+        <th>Shift Date</th>
+        <th>Shift Times</th>
+        <th>Confirmation</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @swaps.each do |swap| %>
+        <% if swap.taker %>
+          <tr>
+            <td><%= swap.shift.user.full_name %></td>
+            <td><%= swap.taker.full_name %></td>
+            <td><%= swap.shift.pretty_date %></td>
+            <td><%= swap.shift.pretty_time%></td>
+            <td><%= button_to "Confirm", confirm_swap_path(swap), class: "btn btn-default btn-sm" %> <%= button_to "Deny", deny_swap_path(swap), class: "btn btn-default btn-sm" %></td>
+          </tr>
         <% end %>
-      </tbody>
-    </table>
-  </div>
+      <% end %>
+    </tbody>
+  </table>
 </div>
