--- a/src/app/views/layouts/_header.html.erb
+++ b/src/app/views/layouts/_header.html.erb
@@ -7,12 +7,12 @@
         <li><%= link_to "Home", home_path %></li>
         <li><%= link_to "SwapBoard", swap_board_path %></li>
         <li><%= link_to "MasterSchedule", master_schedule_path %></li>
-        <% if @user.access == 1 %>
+        <% if @cur_user.access == 1 %>
           <li class="divider"></li>
-          <li><%= link_to "CreateUser", root_path %></li>
+          <li><%= link_to "CreateUser", new_user_path %></li>
         <% end %>
         <li class="divider"></li>
-        <li><%= link_to "EditProfile", edit_path %></li>
+        <li><%= link_to "EditProfile", edit_user_path(@cur_user.id)%></li>
         <li><%= link_to "LogOut", logout_path %></li>
       </ul>
     </div>
