modify user index

--- a/src/app/views/users/index.html.erb
+++ b/src/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
         <tr>
           <td><%= u.full_name %></td>
           <td><%= u.id %></td>
-          <td><%= button_to "Delete", '#' %>
+          <td><%= button_to "Delete", '#', class: "btn btn-default btn-sm" %>
         </tr>
       <% end %>
     </tbody>
