adds destroying of users for Admins only. Moved the user edit current user form to pages#home

--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if @cur_user %>
+  <% if @user %>
     <%= render 'layouts/header' %>
   <% end %>
   <div class="container">
