--- a/src/app/views/pages/home.html.erb
+++ b/src/app/views/pages/home.html.erb
@@ -31,3 +31,8 @@
     </tbody>
   </table>
 </div>
+<br />
+<h1 class="text-center">Edit Profile</h1>
+<div class="jumbotron">
+  <%= render 'users/form' %>
+</div>
