--- a/src/app/views/shifts/_form.html.erb
+++ b/src/app/views/shifts/_form.html.erb
@@ -15,7 +15,7 @@
   <%= form_for(@shift) do |f| %>
     <%= f.label :user_id, class:"form-label" %>
     <br />
-    <%= f.text_field :user_id, class:"form-control" %>
+    <%= f.collection_select :user_id, User.all, :id, :full_name, prompt: true %>
     <br />
     <%= f.label :start_time, class:"form-label" %>
     <br />
