--- a/src/app/views/shifts/_form.html.erb
+++ b/src/app/views/shifts/_form.html.erb
@@ -30,6 +30,6 @@
       <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
     </div>
     <br />
-    <%= f.submit class:"btn btn-primary" %>
+    <%= f.submit class:"btn btn-primary form-control" %>
   <% end %>
 </div>
