--- a/src/app/views/users/_form.html.erb
+++ b/src/app/views/users/_form.html.erb
@@ -18,6 +18,6 @@
       <%= f.number_field :access, class: "form-control"%>
       <br />
     <% end %>
-    <%= f.submit class: "btn btn-primary btn-sm" %>
+    <%= f.submit class: "btn btn-primary btn-sm form-control" %>
   <% end %>
 </div>
