--- a/src/app/views/pages/home.html.erb
+++ b/src/app/views/pages/home.html.erb
@@ -32,7 +32,11 @@
   </table>
 </div>
 <br />
-<h1 class="text-center">Edit Profile</h1>
-<div class="jumbotron">
+<div class="col-md-6">
+  <h1 class="text-center">Edit Profile</h1>
   <%= render 'users/form' %>
+</div>
+<div class="col-md-6">
+  <h1 class="text-center">Time Off/Availability</h1>
+  <p>Placeholder Text</p>
 </div>
