--- a/src/app/views/shifts/new.html.erb
+++ b/src/app/views/shifts/new.html.erb
@@ -1,4 +1,6 @@
 <h1 class="text-center">New Shift</h1>
-<div class="jumbotron">
+<div class="col-md-4"></div>
+<div class="col-md-4">
   <%= render 'form' %>
 </div>
+<div class="col-md-4"></div>
