edits: deleting and editing of shifts.

--- a/src/app/views/logins/login.html.erb
+++ b/src/app/views/logins/login.html.erb
@@ -6,7 +6,7 @@
       <%= text_field_tag :username, nil, class:"form-control" %><br/>
       <%= label_tag :password, nil, class:"control-label"%><br/>
       <%= password_field_tag :password, nil, class:"form-control" %><br/>
-      <%= submit_tag "login", class:"btn btn-primary" %>
+      <%= submit_tag "login", class:"btn btn-primary form-control" %>
     <% end %>
   </div>
 </div>
