--- a/src/app/views/users/index.html.erb
+++ b/src/app/views/users/index.html.erb
@@ -1,4 +1,3 @@
-<div class="jumbotron">
   <table class="table">
     <thead>
       <th>Name</th>
@@ -11,13 +10,11 @@
           <td><%= u.full_name %></td>
           <td><%= u.id %></td>
           <% if @user.access == 1 and @user != u %>
-            <td>
-              <%= button_to "Delete", u, method: :delete, class: "btn btn-default btn-sm" %>
-              <%= button_to "Edit", edit_user_path(u), method: :get, class: "btn btn-default btn-sm" %>
+            <td><%= button_to "Delete", u, method: :delete, class: "btn btn-default btn-sm" %></td>
+            <td><%= button_to "Edit", edit_user_path(u), method: :get, class: "btn btn-default btn-sm" %></td>
             </td>
           <% end %>
         </tr>
       <% end %>
     </tbody>
   </table>
-</div>
