--- a/src/app/views/pages/master_schedule.html.erb
+++ b/src/app/views/pages/master_schedule.html.erb
@@ -37,7 +37,8 @@
           <td><%= shift.user.full_name %></td>
           <td><%= shift.pretty_date %></td>
           <td><%= shift.pretty_time %></td>
-          <td><%= button_to "Delete", shift, method: :delete, class: "btn btn-default btn-sm" %>
+          <td><%= button_to "Delete", shift, method: :delete, class: "btn btn-default btn-sm" %></td>
+          <td><%= button_to "Edit", edit_shift_path(shift), method: :get, class: "btn btn-default btn-sm" %></td>
         </tr>
       <% end %>
     </tbody>
